pkg/guardrails/policyDefinitions/constraints/v1/cannot-edit-fleet-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictedFleetEdits
metadata:
  name: cannot-edit-fleet-resources
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]       
  parameters:
    allowedUsers: ["nodeclient","system:serviceaccount:kube-system:aci-connector-linux","system:serviceaccount:kube-system:node-controller","acsService","aksService","system:serviceaccount:kube-system:cloud-node-manager",system:serviceaccount:kube-system:azure-policy]
    allowedGroups: ["system:node"]
