pkg/guardrails/policyDefinitions/constraints/v1/no-bad-pdbs.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPDBRestrictions
metadata:
  name: pod-distruption-budget
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "ReplicaSet", "StatefulSet"]
      - apiGroups: ["policy"]
        kinds: ["PodDisruptionBudget"]
