pkg/guardrails/policyDefinitions/constraints/v1/no-unauthenticated-image-pulls.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictedImagePulls
metadata:
  name: no-unauthenticated-image-pulls
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
