pkg/guardrails/policyDefinitions/constraints/v1/only-restricted-repositories.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictedRepos
metadata:
  name: only-restricted-image-repos
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedRegex: "SomeRegex"
