pkg/guardrails/policyDefinitions/constraints/v1/reserved-system-pool-taints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReservedTaints
metadata:
  name: system-reserved-taints
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Node"]
  parameters:
    reservedTaints: ["CriticalAddonsOnly"]
